# Uni-Agent-Template

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  uniads.agent.json
demo/: README.md  final_career_agent.py  step_01_domain_tools.py  step_02_memory_profile.py  step_03_primary_agent.py  step_04_with_uniads.py
demo/internship_agent/: README.md  agent_config.json  internship_agent.py  knowledge_sources.json
docs/: AGENT_HUB_COMPATIBILITY.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  UNIADS_ADS_MODULE.md
examples/: basic_client.py
scripts/: smoke_test.py  validate_agent_hub_compatibility.py
src/uni_agent_template/: __init__.py  ads.py  agent.py  config.py  guardrails.py  knowledge.py  llm.py  memory.py  observability.py  schemas.py  server.py  skills.py  sources.py  tools.py  workflow.py
tests/: test_agent.py  test_agent_hub_manifest.py  test_internship_demo.py
