[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uni-agent-template"
version = "0.1.0"
description = "Modular UniAds-compatible agent template with V2 sponsor context support."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "UniAds" }]
license = { text = "MIT" }
dependencies = [
  "requests>=2.31",
  "pydantic>=2.6",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.27"]
test = ["pytest>=8.0"]
agents = ["openai-agents>=0.2"]
langchain = ["langchain>=0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
